@@ -2,15 +2,15 @@ Package: multmod
 Title: Testing of multiple outcomes
 LazyLoad: yes
 LazyData: yes
-Version: 0.4
+Version: 0.5
 Author: Christian B. Pipper <pipper@life.ku.dk>, Christian Ritz
         <ritz@life.ku.dk>
 Maintainer: Christian B. Pipper <pipper@life.ku.dk>
 Description: Testing of multiple outcomes using i.i.d. decompositions
 License: GPL (>= 2)
 Depends: R (>= 2.6.0), gtools, mvtnorm, sandwich, MASS
-Date: 2009-06-23
+Date: 2009-08-31
 URL: http://www.r-project.org
-Packaged: Mon Jun 29 08:21:42 2009; Christian Pipper
+Packaged: Mon Aug 31 14:05:45 2009; Christian Pipper
 Repository: CRAN
-Date/Publication: 2009-06-29 06:55:24
+Date/Publication: 2009-08-31 17:39:41
